# uefi_bootloader

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  boot.cfg  boot.json
.cargo/: config.toml
.github/workflows/: rust.yml
src/: cfg.rs  fs.rs  gop.rs  io.rs  main.rs  str.rs  test.rs
