[package]
name = "boot"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/GDPU-OSDev/boot"
description = "UEFI BootLoader"
license = "BSD-2-Clause"
authors = ["Supdrewin"]

[dependencies]
embedded-graphics = "0.7"
serde = { version = "1.0", default-features = false, features = [
	"alloc",
	"derive",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tinybmp = "0.3"
uefi = { version = "0.15", features = ["exts"] }
uefi-services = "0.12"
